updated bootstrap, jqoury installs, and fixed menu

--- a/html/content/main-page.html
+++ b/html/content/main-page.html
@@ -1,8 +1,8 @@
 
 
-<div class="d-flex justify-content-between">
+<div class="d-flex justify-content-between bg ">
   <!-- Form -->
-  <div class="bg-main w-33 p-2">
+  <div class="bg-main w-33 p-2 border">
     <h1>Crawl weblinks</h1>
     <p>asdas asld jaldsjad lasjd lakjds</p>
 
@@ -10,7 +10,7 @@
 
 
   <!-- Logs -->
-  <div class="log-box w-50 p-2">
+  <div class="log-box w-50 p-2 border">
 
     <!-- Header -->
     <div>
