--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="">
 
 <head>
     <meta charset="utf-8">
@@ -7,12 +7,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- PLUGINS FOR PROJECT -->
     <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
@@ -29,13 +29,13 @@
 <div class="m-0 p-0 row vh-100">
 
     <!-- Menu -->
-    <div class="col-2 h-100 menu text-white">
+    <div class="col-2 h-100 menu  bg-dark ">
         <div class="">
-            <div class="pt-3 ps-3">
+            <div class="pt-3 ps-3 text-white">
                 <h2>Project</h2>
             </div>
 
-            <ul class="d-flex-1 flex-column justify-content-between nav nav-pills mt-3">
+            <ul class="d-flex flex-column justify-content-between nav nav-pills mt-3">
 
                 <li class="nav-item border-bottom border-top " >
                     <a class="nav-link d-flex m-0 justify-content-start text-white" href="#"
@@ -80,7 +80,6 @@
 <!-- Scripts -->
 <script src="../js/utility/api.js"></script>
 <script src="../js/utility/formData.js"></script>
-
 <script src="../js/router.js"></script>
 
 </body>
