--- a/html/utility/create-pages.html
+++ b/html/utility/create-pages.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <!-- Place favicon.ico in the root directory -->
-    <link rel="stylesheet" href="../../css/basic.css">
-    <link rel="stylesheet" href="../../css/stylesheet.css">
+    <link rel="stylesheet" href="/css/basic.css">
+    <link rel="stylesheet" href="/css/stylesheet.css">
 
 </head>
 <body>
@@ -110,10 +110,10 @@
 
 
 <!-- Scripts -->
-<script src="../js/utility/api.js"></script>
-<script src="../js/utility/formData.js"></script>
+<script src="/js/utility/api.js"></script>
+<script src="/js/utility/formData.js"></script>
 
-<script src="../js/router.js"></script>
+<script src="/js/router.js"></script>
 
 </body>
 
