--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <!-- Place favicon.ico in the root directory -->
-    <link rel="stylesheet" href="../css/basic.css">
-    <link rel="stylesheet" href="../css/stylesheet.css">
+    <link rel="stylesheet" href="/css/basic.css">
+    <link rel="stylesheet" href="/css/stylesheet.css">
 
 </head>
 
@@ -78,9 +78,9 @@
 
 
 <!-- Scripts -->
-<script src="../js/utility/api.js"></script>
-<script src="../js/utility/formData.js"></script>
-<script src="../js/router.js"></script>
+<script src="/js/utility/api.js"></script>
+<script src="/js/utility/formData.js"></script>
+<script src="/js/router.js"></script>
 
 </body>
 
