--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul class="d-flex flex-column justify-content-between nav nav-pills mt-3">
 
                 <li class="nav-item border-bottom border-top " >
-                    <a class="nav-link d-flex m-0 justify-content-start text-white" href="#"
+                    <a class="nav-link d-flex m-0 justify-content-start text-white" href=""
                        onclick="route('home')">
                         <i class="material-icons menu-icon me-2">play_arrow</i>
                         <p class="m-0">Spil</p>
@@ -46,7 +46,7 @@
                 </li>
 
                 <li class="nav-item border-bottom">
-                    <a class="nav-link d-flex m-0 justify-content-start text-white" href="#"
+                    <a class="nav-link d-flex m-0 justify-content-start text-white" href=""
                        onclick="route('page1')">
                         <i class="material-icons menu-icon me-2">reviews</i>
                         <p class="m-0">Feedback</p>
@@ -54,7 +54,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link d-flex m-0 justify-content-start text-white" href="#"
+                    <a class="nav-link d-flex m-0 justify-content-start text-white" href=""
                        onclick="route('page2')">
                         <i class="material-icons menu-icon me-2">login</i>
                         <p class="m-0">Admin</p>
@@ -78,9 +78,10 @@
 
 
 <!-- Scripts -->
-<script src="/js/utility/api.js"></script>
-<script src="/js/utility/formData.js"></script>
-<script src="/js/router.js"></script>
+<script type="text/javascript" src="/js/utility/api.js"></script>
+<script type="text/javascript" src="/js/utility/formData.js"></script>
+<script type="text/javascript" src="/js/utility/menu.js"></script>
+<script type="text/javascript" src="/js/router.js"></script>
 
 </body>
 
