created product page

--- a/html/content/delivery.html
+++ b/html/content/delivery.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>AMAZON 2.0</title>
+    <title>AMAZON 2.0 | Delivery</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -38,21 +38,21 @@
             <ul class="d-flex flex-column justify-content-between nav nav-pills mt-3">
 
                 <li class="nav-item border-bottom border-top " >
-                    <a id="home-btn" class="nav-link d-flex m-0 justify-content-start text-white active">
+                    <a id="home-btn" class="nav-link d-flex m-0 justify-content-start text-white" href="../../index.html">
                         <i class="material-icons menu-icon me-2">home</i>
                         <p class="m-0">Home</p>
                     </a>
                 </li>
 
                 <li class="nav-item border-bottom">
-                    <a id="page1-btn" class="nav-link d-flex m-0 justify-content-start text-white" href="html/content/products.html">
+                    <a id="page1-btn" class="nav-link d-flex m-0 justify-content-start text-white" href="products.html">
                         <i class="material-icons menu-icon me-2">menu_book</i>
                         <p class="m-0">Produkt Oversigter</p>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a  id="page2-btn" class="nav-link d-flex m-0 justify-content-start text-white" href="html/content/delivery.html">
+                    <a  id="page2-btn" class="nav-link d-flex m-0 justify-content-start text-white active" href="delivery.html">
                         <i class="material-icons menu-icon me-2">local_shipping</i>
                         <p class="m-0">Odrer</p>
                     </a>
