--- a/html/content/delivery.html
+++ b/html/content/delivery.html
@@ -9,9 +9,14 @@
 
     <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+            crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -37,8 +42,9 @@
 
             <ul class="d-flex flex-column justify-content-between nav nav-pills mt-3">
 
-                <li class="nav-item border-bottom border-top " >
-                    <a id="home-btn" class="nav-link d-flex m-0 justify-content-start text-white" href="../../index.html">
+                <li class="nav-item border-bottom border-top ">
+                    <a id="home-btn" class="nav-link d-flex m-0 justify-content-start text-white"
+                       href="../../index.html">
                         <i class="material-icons menu-icon me-2">home</i>
                         <p class="m-0">Home</p>
                     </a>
@@ -52,7 +58,8 @@
                 </li>
 
                 <li class="nav-item">
-                    <a  id="page2-btn" class="nav-link d-flex m-0 justify-content-start text-white active" href="delivery.html">
+                    <a id="page2-btn" class="nav-link d-flex m-0 justify-content-start text-white active"
+                       href="delivery.html">
                         <i class="material-icons menu-icon me-2">local_shipping</i>
                         <p class="m-0">Odrer</p>
                     </a>
@@ -65,8 +72,102 @@
 
     <!-- content -->
     <div class="col content background p-3" id="main-content">
-        <h1>Velkommen til Amazon 2.0</h1>
 
+        <div class="d-flex justify-content-between">
+            <div class="w-33 ">
+                <div class="d-flex justify-content-start">
+                    <button id="page-1-btn" class="ltc box-link active-box-link">Opret Ordrer</button>
+
+                    <button id="page-2-btn" class="box-link">Find odrer</button>
+
+                    <button id="page-3-btn" class="rtc box-link">Opret dilvery</button>
+                </div>
+
+
+                <div class=" p-3 menu-box  border bg-light " id="box-content">
+
+
+                    <!-- create dilvery-->
+                    <div id="page-1" class="box-page hs-50 overflow-auto">
+
+                        <div class="d-flex justify-content-between">
+                            <h2>Opret ordrer</h2>
+                            <button onclick="clearOrder()" class="btn btn-outline-danger">cancel</button>
+                        </div>
+
+
+                        <p>Total Weight: <span id="totalWeight"></span></p>
+                        <p>Total price: <span id="totalPrice"></span></p>
+
+                        <button class="btn btn-outline-success" onclick="orders.createOrder()">Opret odrer</button>
+
+                        <table class="table w-100 mt-3">
+
+                            <thead>
+                            <tr class="table-dark">
+                                <td>ID</td>
+                                <td>Name</td>
+                                <td>Price</td>
+                                <td>weight</td>
+                                <td></td>
+
+                            </tr>
+                            </thead>
+
+                            <tbody class="mt-5 " id="CreateOrderView">
+
+                            </tbody>
+                        </table>
+
+                    </div>
+
+
+                    <!-- Find Dilevery-->
+                    <div id="page-2" class="box-page">
+
+
+                    </div>
+
+                    <!-- find varevogn -->
+                    <div id="page-3" class="box-page">
+
+
+                    </div>
+                </div>
+
+            </div>
+
+
+            <div class="w-50 border">
+                <div class="p-2 d-flex justify-content-between align-items-center bg-light border-bottom">
+                    <h4 class="m-0 p-0">Products</h4>
+                </div>
+
+                <div class="bg-white hs-50 ">
+
+                    <table class="table w-100">
+                        <thead>
+                        <tr class="table-dark">
+                            <td>ID</td>
+                            <td>Name</td>
+                            <td>Price</td>
+                            <td>Weight [g]</td>
+                            <td>Total</td>
+                            <td></td>
+                        </tr>
+                        </thead>
+
+                        <tbody class="mt-5 overflow-auto" id="productDisplayWindow">
+
+
+                        </tbody>
+                    </table>
+                </div>
+
+            </div>
+
+
+        </div>
 
 
     </div>
@@ -79,6 +180,10 @@
 <script type="text/javascript" src="/js/utility/api.js"></script>
 <script type="text/javascript" src="/js/utility/formData.js"></script>
 <script type="text/javascript" src="/js/utility/menu.js"></script>
+
+<script type="text/javascript" src="/js/products/products.js"></script>
+<script type="text/javascript" src="/js/delivery/deliveryMain.js"></script>
+<script type="text/javascript" src="/js/delivery/order.js"></script>
 
 
 </body>
